# gaussy

./: README.md  pyproject.toml
gaussy/: __init__.py  data.py  gaussians.py  training.py
