[project]
name = "gaussy"
description = "Gaussian Splatting made easy"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["gaussian splatting", "3d", "nvs", "nerf"]
authors = [{ name = "Kevin N. Dietrich", email = "kenichdietrich@gmail.com" }]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.0.0",
    "pycolmap>=0.6.1",
    "scipy>=1.12.0",
    "plyfile>=1.0.3",
    "diff_gaussian_rasterization@git+https://github.com/graphdeco-inria/diff-gaussian-rasterization",
]

[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"
